examples/test/testpolicy13229.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13229
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key14: value30
      key0: value0
      key28: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value19
          key46: value13
          key30: value46
      podSelector:
        matchLabels:
          key28: value3
          key23: value25
          key17: value39
